<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:orientation="vertical"
    tools:context=".CityActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/label_occasion"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_occasion"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/edit_text"
                android:elevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/label_title"
                android:dropDownWidth="fill_parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/calendar_from"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/edit_text"
                    android:elevation="10dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="date"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <DatePicker
                    android:id="@+id/start_date_picker"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:foreground="@drawable/ic_calendar"
                    android:padding="20dp"
                    android:startYear="2017"
                    android:spinnersShown="false" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/calendar_to"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/edit_text"
                    android:elevation="10dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="date"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <DatePicker
                    android:id="@+id/end_date_picker"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:foreground="@drawable/ic_calendar"
                    android:padding="20dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/label_guests"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/crowd_spinner"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/edit_text"
                android:elevation="10dp"
                android:gravity="center"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textColor="#00CCCD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/label_food"
                android:textColor="#2C3335"
                android:textSize="20dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/veg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/checkbox_label1"
                android:textColor="#019031"
                android:textSize="17sp"
                android:textStyle="normal" />

            <CheckBox
                android:id="@+id/nonveg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/checkbox_label2"
                android:textColor="#BA2F16"
                android:textSize="17sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calc_price"
                    android:padding="5dp"
                    android:text="@string/button_price"
                    android:textSize="15sp"
                    android:background="@drawable/calcprice_rounded_btn"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="100dp"/>

                <ProgressBar
                    android:id="@+id/price_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:indeterminate="true"
                    android:indeterminateTint="#E74292"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="invisible" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="#E5B143" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="@string/label_price"
                android:textColor="#2C3335"
                android:textSize="25dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#E5B143" />

            <Button
                android:id="@+id/btn_finalBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:background="@drawable/booknow_rounded_btn"
                android:fontFamily="sans-serif-black"
                android:padding="12dp"
                android:textColor="#EAF0F1"
                android:text="@string/button_book"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>