<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/hall_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hall_pictures"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:padding="10dp"
                android:src="@drawable/hall_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hall_title"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/hall_name"
                    android:textColor="#EC4849"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/hall_stars"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:padding="4dp"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="18dp"
                        android:padding="5dp"
                        android:text="@string/hall_rating"
                        android:textColor="#EEC213"
                        android:textSize="11sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/hall_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:padding="2dp"
                android:text="@string/hall_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/hall_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="serif-monospace"
                android:padding="8dp"
                android:text="@string/hall_description"
                android:textColor="#0A79DF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/book_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:background="@drawable/button_shadow"
                android:fontFamily="sans-serif-black"
                android:padding="12dp"
                android:elevation="10dp"
                android:text="Book Now"
                android:textColor="#30336B"
                android:textSize="15sp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>